--- a/P3SyntaxTreeViewer/Messages.resx
+++ b/P3SyntaxTreeViewer/Messages.resx
@@ -120,4 +120,7 @@
   <data name="m_bd36c92cbacf492c8bf817e890cbaafa" xml:space="preserve">
     <value>Redeclared Symbol</value>
   </data>
+  <data name="m_c795d660c7a44bce8af426235295bf3d" xml:space="preserve">
+    <value>Redeclared Parameter</value>
+  </data>
 </root>
