added referenced units in type system

--- a/P3SyntaxTreeViewer/Messages.resx
+++ b/P3SyntaxTreeViewer/Messages.resx
@@ -120,6 +120,9 @@
   <data name="m_0103" xml:space="preserve">
     <value>Missing token</value>
   </data>
+  <data name="m_0104" xml:space="preserve">
+    <value>Missing file</value>
+  </data>
   <data name="m_05d3bbe032e243eb850bebdb2b7ef272" xml:space="preserve">
     <value>Unexpected token</value>
   </data>
